# rusty-weather

./: .rustfmt.toml  Cargo.toml  README.md
src/: main.rs
